--- a/app/src/main/res/layout/fragment_jam.xml
+++ b/app/src/main/res/layout/fragment_jam.xml
@@ -61,18 +61,19 @@
                 android:id="@+id/tv_history_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/purple_200"
                 android:text="@string/history_title"
                 android:textAlignment="center"
                 android:textSize="24sp"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="16dp"/>
+                />
 
             <Button
                 android:id="@+id/btn_create_note"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="12dp"
                 android:text="@string/btn_buatCatatan" />
 
             <androidx.recyclerview.widget.RecyclerView
