--- a/app/src/main/res/layout/fragment_saran.xml
+++ b/app/src/main/res/layout/fragment_saran.xml
@@ -6,14 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="16dp"
     android:orientation="vertical"
-    android:weightSum="2">
+    >
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animationView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         app:lottie_rawRes="@raw/panda_sleep_anim"/>
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
@@ -28,4 +27,36 @@
         android:justificationMode="inter_word"
         tools:text="@string/saran_tidur" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:fillViewport="true"
+        android:padding="20dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tebak Gambar"
+                android:textSize="24sp"
+                android:textColor="@color/black"
+                android:padding="16dp"
+                android:gravity="center"/>
+            <ImageView
+                android:id="@+id/imgData"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:src="@drawable/baseline_broken_image_24"
+                android:adjustViewBounds="true"
+                />
+            <TextView
+                android:id="@+id/tvData"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
